--- a/.github/workflows/generate_blog.yml
+++ b/.github/workflows/generate_blog.yml
@@ -2,7 +2,9 @@ name: Generate Weekly AI Blog
 
 on:
   schedule:
-    - cron: '0 9 * * 1' # Every Monday at 9:00 AM UTC
+   # - cron: '0 9 * * 1' # Every Monday at 9:00 AM UTC
+    - cron: '0 0 * * 6' # Every Saturday at 00:00 UTC → Friday 8:00 PM ET
+
   workflow_dispatch: # Allows you to manually trigger from GitHub UI
 
 jobs:
