--- a/.github/workflows/generate_blog.yml
+++ b/.github/workflows/generate_blog.yml
@@ -35,5 +35,6 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "🤖 Auto-generate weekly AI blog"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }} HEAD:main
-
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Ialzouby/Personal-Portfolio.git HEAD:main
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
