--- a/.github/workflows/generate_blog.yml
+++ b/.github/workflows/generate_blog.yml
@@ -2,10 +2,11 @@ name: Generate Weekly AI Blog
 
 on:
   schedule:
-   # - cron: '0 9 * * 1' # Every Monday at 9:00 AM UTC
     - cron: '0 0 * * 6' # Every Saturday at 00:00 UTC → Friday 8:00 PM ET
+  workflow_dispatch:
 
-  workflow_dispatch: # Allows you to manually trigger from GitHub UI
+permissions:
+  contents: write
 
 jobs:
   generate-blog:
@@ -13,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -31,10 +32,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "actions@users.noreply.github.com"
           git add .
-          git commit -m "🤖 Auto-generate weekly AI blog"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/Ialzouby/Personal-Portfolio.git HEAD:main
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          git commit -m "🤖 Auto-generate weekly AI blog" || echo "Nothing to commit"
+          git push
