--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.0",
     "react-icons": "^5.2.1",
     "react-modal-video": "^2.0.2",
+    "resend": "^4.7.0",
     "sass": "^1.77.6",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.12.2",
