--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.1.2",
     "@types/react-modal-video": "^1.2.3",
-    "axios": "^1.9.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.5.0",
+    "fast-xml-parser": "^5.2.5",
     "framer-motion": "^11.3.2",
     "next": "^15.3.0",
     "next-themes": "^0.3.0",
-    "openai": "^5.1.1",
+    "openai": "^5.12.2",
     "react": "^18.3.0",
     "react-animate-height": "^3.2.3",
     "react-countup": "^6.5.3",
@@ -35,12 +36,12 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "@types/node": "^20",
+    "@types/node": "^20.19.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^15.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
