--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.1.2",
+    "@prisma/client": "^6.13.0",
     "@types/react-modal-video": "^1.2.3",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.5.0",
     "fast-xml-parser": "^5.2.5",
     "framer-motion": "^11.3.2",
+    "markdown-it": "^14.1.0",
     "next": "^15.3.0",
     "next-themes": "^0.3.0",
     "openai": "^5.12.2",
+    "prisma": "^6.13.0",
     "react": "^18.3.0",
     "react-animate-height": "^3.2.3",
     "react-countup": "^6.5.3",
@@ -27,12 +30,14 @@
     "react-icons": "^5.2.1",
     "react-modal-video": "^2.0.2",
     "resend": "^4.7.0",
+    "sanitize-html": "^2.17.0",
     "sass": "^1.77.6",
     "sharp": "^0.33.4",
     "sweetalert2": "^11.12.2",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.2.6",
-    "yet-another-react-lightbox": "^3.23.2"
+    "yet-another-react-lightbox": "^3.23.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
